dev/styles/_projects.scss
.portfolio {
    padding-top: 2%;

    &__container {
        &-card {
            width: 70vw !important;
            display: flex !important;
            flex-direction: row;
            justify-content: space-between;

            @media (max-width: 810px) {
                & {
                    flex-direction: column;
                }
            }
        }

        &-card-screenshot {
            width: 45%;
            max-width: 700px;

            @media (max-width: 900px) {
                & {
                    width: 100%;
                    padding-top: 50px;
                }
            }

            @media (max-width: 810px) {
                & {
                    padding-top: 0;
                }
            }

            img {
                transition: 0.3s;
                width: 100%;
                display: inline-block !important;
            }
        }

        &-card-text {
            width: 45%;

            @media (max-width: 900px) {
                width: 100%;

                p {
                    display: none;
                }
            }
        }
    }
}

.slick-list {
    height: 100% !important;
}

.slick-prev,
.slick-next {
    z-index: 90;
    font-size: 2.5vw;
}

.slick-prev {
    left: -4vw;
}

.slick-next {
    right: -3vw;
}

.slick-prev:before,
.slick-next:before {
    font-size: 4rem;
    color: $big-stone;
    opacity: none;
}

.slick-dots {
    bottom: -2.5vw;
}

.slick-dotted.slick-slider {
    margin-bottom: 7vw;
}

